src/discrete-layer/views/discrete-layer-view.css
.mainViewContainer {
  display: flex;
  position: relative;
  height: calc(100vh - 52px);
  margin: 0 8px 0 8px;
  padding-bottom: 8px;
}

.sidePanelParentContainer {
  width: var(--side-panel-width);
  display: flex;
  flex-direction: column;
}

.secondaryPanel {
  z-index: 1;
  margin: 0 8px;
  width: unset;
}

.sidePanelContainer {
  border-radius: 12px;
}

body[dir='rtl'] .sidePanelContainer {
  margin-right: unset;
  margin-left: 8px;
}

.mapAppContainer {
  left: calc(var(--side-panel-width) + 8px);
  width: calc(calc(100% - var(--side-panel-width)) - 8px);
  position: absolute;
  height: calc(100% - 8px);
  padding-bottom: 8px;
}

body[dir='rtl'] .mapAppContainer {
  right: calc(var(--side-panel-width) + 8px);
  left: unset;
}

.headerContainer {
  height: 52px;
  display: flex;
  align-items: center;
}

.headerViewsSwitcher {
  width: 20%;
  display: flex;
  align-items: center;
}

.headerSearchOptionsContainer {
  margin: 8px auto 0 auto;
  height: 64px;
  z-index: 1;
  background-color: var(--mdc-theme-background);
  border-radius: 64px;
}

.headerSystemAreaContainer {
  width: 10%;
  height: 100%;
  display: flex;
  align-items: center;
  gap: 16px;
  flex-direction: row-reverse;
  padding-right: 16px;
}

body[dir='rtl'] .headerSystemAreaContainer{
  padding-right: unset;
  padding-left: 16px;
}

.headerSystemAreaContainer .avatar {
  background: var(--mdc-theme-gc-selection-background);
}

.alignCenter {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.errorTitle {
  margin: 14px;
}

.errorMessage {
  margin: 16px;
}

.errorDescription {
  margin: 16px;
}

/* TabContent */
.tabHeaderContainer {
  display: flex;
  height: 50px;
}

.tabTitleContainer {
  flex-grow: 1;
  flex-basis: 0;
  background-color: red;
}

.tabTitle {
  border-bottom-right-radius: 16px;
  border-bottom-width: 2px;
  border-bottom-color: red;
  border-bottom-style: solid;
  z-index: 1;
  height: 100%;
  display: flex;
  align-items: center;
}

.tabTitleText {
  font-size: 18px;
}

body[dir='rtl'] .tabTitle {
  border-bottom-right-radius: unset;
  border-bottom-left-radius: 16px;
}

.tabOperationsContainer {
  flex-grow: 1;
  flex-basis: 0;
  border-top-right-radius: 8px;
}

body[dir='rtl'] .tabOperationsContainer {
  border-top-right-radius: unset;
  border-top-left-radius: 8px;
}

.tabOperations {
  border-top-right-radius: 8px;
  border-top-left-radius: 16px;
  border-top-color: red;
  border-top-style: solid;
  background-color: red;
  z-index: 1;
  height: 100%;
  display: flex;
  justify-content: flex-end;
}

.operationIcon {
  padding: 8px 8px;
}

body[dir='rtl'] .tabOperations {
  border-top-right-radius: unset;
  border-top-left-radius: unset;
  border-top-left-radius: 8px;
  border-top-right-radius: 16px;
}

.tabContentContainer {
  padding: 0 0 8px 8px;
  height: 100%;
}

body[dir='rtl'] .tabContentContainer {
  padding: 0 8px 8px 0;
}

.sideDetailsPanel {
  margin-top: 8px;
  padding-left: 20px;
}

body[dir='rtl'] .sideDetailsPanel {
  padding-left: unset;
  padding-right: 20px;
}

.version {
  margin: 0 16px;
}

#newContainer .mdc-menu-surface.mdc-menu-surface--open {
  top: 40px !important;
}

#newContainer {
  display: flex;
}

.tabHeaderContainer .filterByCatalogEntitySelect {
  width: 130px;
  padding: 0 6px 0 6px;
  z-index: 5;
  align-self: center;
}

.tabHeaderContainer .mdc-select__anchor {
  height: 2.5rem;
  width: 120px;
  padding: 0 8px 0 8px;
}

.tabHeaderContainer .mdc-select .mdc-select__dropdown-icon {
  margin-left: 0;
  margin-right: 0;
}

